--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dayjs",
-  "version": "0.0.0-development",
+  "version": "1.11.11",
   "description": "2KB immutable date time library alternative to Moment.js with the same modern API ",
   "main": "dayjs.min.js",
   "types": "index.d.ts",
@@ -44,11 +44,14 @@
     "moment"
   ],
   "author": "iamkun",
+  "contributors": [
+    "bstoots"
+  ],
   "license": "MIT",
   "homepage": "https://day.js.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/iamkun/dayjs.git"
+    "url": "https://github.com/bstoots/dayjs.git"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.44",
