--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dayjs",
+  "name": "@bstoots/dayjs",
   "version": "1.11.11",
   "description": "2KB immutable date time library alternative to Moment.js with the same modern API ",
   "main": "dayjs.min.js",
